Change title and removed image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h2>This is my site</h2>
-    <img src="" alt="">
+    <a href="./about.html"></a>
+    <img src="https://images.app.goo.gl/JVunacTESQWcyQHu5" alt="Itay Levi">
     <p></p>
 </body>
 </html>
