Another elements to html file

--- a/index.html
+++ b/index.html
@@ -6,9 +6,27 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>This is my site</h2>
-    <a href="./about.html"></a>
+    <h1>This is my site</h1>
+    <a href="https://google.com">Go to Google</a>
     <img src="https://images.app.goo.gl/JVunacTESQWcyQHu5" alt="Itay Levi">
-    <p></p>
+    <label for="input"></label>
+    <input id="input" type="text" disabled>
+    <span>I an inline text</span>
+    <header>I an a semantic element (container)</header>
+    <section>I am a semantic element (container)</section>
+    <nav>I am a semantic element (container)</nav>
+    <button></button>
+    <textarea name="" id=""></textarea>
+    <ol type="I">
+        <li></li>
+        <li></li>
+        <li></li>
+    </ol>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+    <p>Paragraph</p>
 </body>
 </html>
